tests/unit-fail-compilation/j060d.ref
File: j060d.c
Line: 2
Error: TDG2
Description: declaration for f appears with multiple storage class specifiers.
Type: Constraint violation.
See also: C11 sec. 6.7.1:2
Translation failed. Run kcc -d j060d.c to see commands run.
