tests/unit-fail-compilation/j060d.c
int main(void){
      auto int f();
      return 0;
}
